--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Fab</string>
+    <string name="AdminLogin">Login as Admin</string>
+    <string name="GuestContinue">Continue as Guest</string>
+    <string name="login">Login</string>
 </resources>
