--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="password">Password</string>
     <string name="Open">Open</string>
     <string name="Close">Close</string>
+    <string name="menu_item1">Shoes</string>
+    <string name="menu_item2">T-Shirts</string>
+    <string name="menu_item3">Wallets</string>
 </resources>
